k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esp32-iot-server-express
  labels:
    component: espe32-iot-server-express
spec:
  replicas: 1
  selector:
    matchLabels:
      component: espe32-iot-server-express
  template:
    metadata:
      labels:
        component: espe32-iot-server-express
    spec:
      containers:
      - name: express
        image: bloveless/esp32-iot-server:0.0.4
        ports:
        - containerPort: 3000
