k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esp32-iot-server-service
spec:
  type: ClusterIP
  selector:
    component: espe32-iot-server-express
  ports:
    - name: express
      port: 3000
      targetPort: 3000
