k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esp32-iot-server-service
  annotations:
    nginx.org/redirect-to-https: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - esp32-iot-server.brennonloveless.com
      secretName: esp32-iot-server-crt
  rules:
    - host: esp32-iot-server.brennonloveless.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: esp32-iot-server-service
                port:
                  number: 3000
